Fix: template customize button overlap p2p list

--- a/web/src/screens/P2P/P2POffersScreen/P2POffersScreen.pcss
+++ b/web/src/screens/P2P/P2POffersScreen/P2POffersScreen.pcss
@@ -1,6 +1,6 @@
 .pg-p2p-tab {
   background: var(--body-background-color);
-  margin-bottom: 24px !important;
+  margin-bottom: 56px !important;
   margin-top: 36px !important;
   max-width: 1368px !important;
   padding: 0 !important;
@@ -43,9 +43,9 @@
 
   &__left {
     color: var(--secondary-contrast-cta-color);
-    letter-spacing: 0.04em;
     font-size: var(--font-size-bigger);
     font-weight: 600;
+    letter-spacing: 0.04em;
     margin-left: 24px;
   }
 }
